<resources>
    <string name="app_name">OnlineShopping</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_with_mobile">LOG IN WITH MOBILE</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">SIGN IN</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="agree">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="go_to_login">Already have Account? </string>
    <string name="validating">Validating the Mobile and Password</string>
    <string name="log_in_error">The username is not exist</string>
    <string name="sign_up_empty">Please fill all the text fields</string>
    <string name="mobile_invaild">The mobile should be 10 digits</string>
    <string name="password_invaild">The password should be at least 6 digits</string>
    <string name="please_agree">Please agree the Terms and Conditions</string>
    <string name="mobile_number_invalid">The mobile number is not valid</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <string name="order">Order</string>
    <string name="log_out">Log out</string>
    <string name="update_profile">Update Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="error">error</string>
    <string name="home">Home</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello">Hello</string>
    <string name="new_to_ebay">New to eBay?</string>
    <string name="create_an_account">Create an account</string>
    <string name="product_name">name</string>
    <string name="product_description">Description</string>
    <string name="add_to_cart">add to cart</string>
    <string name="techology">Techology</string>
    <string name="my_order">My Order</string>
    <string name="tech">techology</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="coupon_code">Coupon code</string>
    <string name="apply">Apply</string>
    <string name="tax">Price (Including Tax)</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="cancel">Cancel</string>
    <string name="order_summary">Order Summary</string>
    <string name="track_order">Track order</string>
    <string name="no_item_found">No Item Found</string>
    <string name="cart">Cart</string>
    <string name="placed_time">Placed Time:</string>
    <string name="delivery_address">Delivery address:</string>
    <string name="mobile_no">Mobile no:</string>
    <string name="top_seller">Top Seller</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="reset_successfully">password reset successfully</string>
</resources>
