<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group1">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_avatar"
            android:title="@string/profile"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/shop"
            android:icon="@drawable/ic_shop"
            android:title="@string/shop"
            app:showAsAction="always"/>
        <item
            android:id="@+id/order"
            android:icon="@drawable/ic_order"
            android:title="@string/order"
            app:showAsAction="always"/>
        <item
            android:id="@+id/seller"
            android:icon="@drawable/ic_fire"
            android:title="Top Seller"
            app:showAsAction="always"/>
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/techology"
            android:icon="@drawable/ic_tech"
            android:title="@string/techology"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out"
            app:showAsAction="ifRoom"/>

    </group>

</menu>