<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RegistrationFragment"
        android:background="@color/background"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_size"
            android:layout_gravity="center"
            android:textColor="@color/white_greyish"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_firstname"
            android:hint="@string/first_name"
            style="@style/LogSignEdtTheme"
            android:drawableLeft="@drawable/user"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white_greyish" />
        <EditText
            android:id="@+id/et_lastname"
            android:hint="@string/last_name"
            style="@style/LogSignEdtTheme"
            android:drawableLeft="@drawable/user"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white_greyish" />
        <EditText
            android:id="@+id/et_address"
            android:hint="@string/address"
            style="@style/LogSignEdtTheme"
            android:drawableLeft="@drawable/location"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/et_mobile"
            android:hint="@string/mobile"
            style="@style/LogSignEdtTheme"
            android:drawableLeft="@drawable/phone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/et_email"
            android:hint="@string/email"
            style="@style/LogSignEdtTheme"
            android:drawableLeft="@drawable/email"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/et_password"
            android:hint="@string/password"
            style="@style/LogSignEdtTheme"
            android:drawableLeft="@drawable/password"
            android:inputType="textPassword"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white_greyish"/>
        <CheckBox
            android:id="@+id/cbx_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:outlineAmbientShadowColor="?attr/colorBackgroundFloating"
            android:outlineSpotShadowColor="@color/white"
            android:shadowColor="@android:color/background_light"
            android:text="@string/agree"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <Button
            android:id="@+id/btn_signup"
            style="@style/LogSignBtnTheme"
            android:text="@string/sign_up"
            android:textColor="@color/background"
            android:background="@drawable/loginbutton_selector"/>

        <TextView
            android:id="@+id/tv_gotologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/go_to_login"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            />
    </LinearLayout>
</ScrollView>