<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_size"
        android:layout_marginTop="@dimen/normal_txt_size"
        android:textColor="@color/black"
        android:text="@string/hello"
        android:layout_marginLeft="@dimen/normal_txt_size"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="end">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/new_to_ebay"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:text="@string/create_an_account"
            android:layout_marginRight="15dp"/>
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_txt_size"
        android:layout_marginRight="@dimen/normal_txt_size">
        <EditText
            android:id="@+id/et_mobile"
            android:hint="@string/mobile"
            style="@style/LogSignEdtTheme"/>

    </android.support.design.widget.TextInputLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/grey" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_txt_size"
        android:layout_marginRight="@dimen/normal_txt_size">
        <EditText
            android:id="@+id/et_password"
            android:hint="@string/password"
            style="@style/LogSignEdtTheme"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/grey"
        android:layout_marginBottom="4dp"/>


    <Button
        android:id="@+id/btn_sign_in"
        style="@style/LogSignBtnTheme"
        android:layout_marginTop="@dimen/x_large_size"
        android:text="@string/sign_in"
        android:textColor="@color/grey"
        android:background="@drawable/loginbutton_selector"/>

    <TextView
        android:id="@+id/tv_go_to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/forget_password"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:textColor="@color/background"
        android:textSize="15sp"
        />


    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>



</LinearLayout>