<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.product.ProductDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardElevation="3dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_product_pic_detail"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/image_not_available"/>

                    <ImageButton
                        android:id="@+id/btn_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_marginLeft="@dimen/medium_size"
                        android:src="@drawable/selector_like"
                        android:layout_gravity="bottom"/>
                </FrameLayout>


                <TextView
                    android:id="@+id/tv_product_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_size"
                    android:layout_marginRight="@dimen/medium_size"
                    android:textColor="@color/black"
                    android:text="@string/product_name"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_product_detail_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_size"
                    android:layout_marginRight="@dimen/medium_size"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:text="$1000"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_size"
                    android:layout_marginRight="@dimen/medium_size"
                    android:layout_marginTop="@dimen/small_size"
                    android:text="@string/product_description"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_size"
                    android:layout_marginRight="@dimen/medium_size"
                    android:layout_marginTop="@dimen/small_size"
                    android:layout_marginBottom="@dimen/normal_size"
                    android:text="@string/product_description"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardElevation="3dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/medium_size"
                android:layout_marginTop="@dimen/normal_size"
                android:layout_marginBottom="@dimen/normal_size">

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:paddingBottom="@dimen/small_size"
                    android:paddingEnd="@dimen/normal_size"
                    android:paddingStart="@dimen/normal_size"
                    android:paddingTop="@dimen/small_size"
                    android:text="4.5"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/rb_rating"
                    style="@style/Widget.MaterialRatingBar.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_size"
                    android:layout_marginStart="@dimen/padding_size"
                    android:rating="4.5" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_add_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_size"
            android:layout_marginEnd="@dimen/normal_size"
            android:layout_marginStart="@dimen/normal_size"
            android:layout_marginTop="@dimen/normal_size"
            android:background="@color/colorPrimary"
            android:text="@string/add_to_cart"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>